force-app/main/default/objects/smagicinteract__Object_Field_Config__c/smagicinteract__Object_Field_Config__c.object-meta.xml
<CustomObject>
    <label>Object Field Config</label>
    <nameField>
        <label>Object Field Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Field Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>