force-app/main/default/objects/smagicinteract__Object_Field_Config__c/fields/smagicinteract__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field_Name__c</fullName>
    <description>Stores field name to be used by Message Object Config object.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>