force-app/main/default/objects/smagicinteract__Object_Field_Config__c/fields/smagicinteract__Field_Purpose__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field_Purpose__c</fullName>
    <description>Stores purpose for which field name to be used by Message Object Config object.</description>
    <label>Field Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
            <value>
                <fullName>unrelated Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>