force-app/main/default/objects/smagicinteract__Object_Field_Config__c/fields/smagicinteract__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field_Type__c</fullName>
    <description>Gives information about how to use Field Name.</description>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API Name</fullName>
            </value>
            <value>
                <fullName>Data Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>