force-app/main/default/objects/smagicinteract__Object_Field_Config__c/fields/smagicinteract__Object_Message_Config__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object_Message_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores information of Message Object Config.</description>
    <label>Related To Master Object</label>
    <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
    <relationshipLabel>Object Message Config</relationshipLabel>
    <relationshipName>Object_Message_Config</relationshipName>
    <type>Lookup</type>
</CustomField>