force-app/main/default/objects/smagicinteract__Object_Field_Config__c/fields/smagicinteract__Unrelated_Object_Config__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Unrelated_Object_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores information of Unrelated Object Config. Used only when the purpose is unrelated.</description>
    <label>Unrelated Object Record</label>
    <referenceTo>smagicinteract__Unrelated_Object_Config__c</referenceTo>
    <relationshipLabel>Unrelated Object Message Config</relationshipLabel>
    <relationshipName>Unrelated_Object_Message_Config</relationshipName>
    <type>Lookup</type>
</CustomField>